--- a/code-solo.html
+++ b/code-solo.html
@@ -13,20 +13,23 @@
 
         <h2>Sample 1:</h2>
         <!-- 1. Surround the p tags with an item-1 class in a div with a class of sample-1 -->
+         <div class="sample-1">
             <p class="item-1">About</p>
             <p class="item-1">News</p>
             <p class="item-1">Videos</p>
             <p class="item-1">More</p>
+         </div>
 
         <h2>Sample 2:</h2>
         <!-- 2. Surround the p tags with an item-2 class in a div with a class of sample-2 -->
+        <div class="sample-2">
             <p class="item-2">About</p>
             <p class="item-2">News</p>
             <p class="item-2">Videos</p>
             <p class="item-2">More</p>
-        
+        </div>
 
         <!-- Spicy Task: add an image tag and include whatever image you want. In the CSS, style it so that it has a position property with value of fixed, a bottom property with a value of 10px, and a right property with a value of 10px. -->
-
+        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSRYCT-vJz9Y4gWlWMZrnoxYpGkdHT4EdiIYZ3WtLBgqX5PSD1LJVMm0kI3csL1JyLLTBsmSf8_fnzM3wDj1bu3p9ewZfFLwlU0SVgo55Za">
     </body>
 </html>
